# TextDescriptives

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEWS.md  README.md  citation.cff  coherence.html  dependency_distance.py  dependencydistance.html  descriptivestats.html  extractors.html  faq.html  genindex.html  index.html  information_theory.html  installation.html  makefile  news.html  objects.inv  posstats.html  py-modindex.html  pyproject.toml  quality.html  readability.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tests.py  textdescriptives.py  todo.md  (+2 more)
.doctrees/: dependencydistance.doctree  descriptivestats.doctree  environment.pickle  index.doctree  installation.doctree  posstats.doctree  quality.doctree  readability.doctree  usingthepackage.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  02_docs.md  03_feature-request.md  config.yml
.github/paper/: paper.md
.github/workflows/: black_formatter.yml  dependabot_automerge.yml  documentation.yml  lint.yml  publish_to_pypi.yml  pytest-cov-comment.yml  pytest.yml  pytest_mac_catalina.yml  pytest_windows.yml  release.yml  run_tutorials.yml  stale.yml  test_and_release.yml  tests.yml
_modules/: index.html
_modules/textdescriptives/: extractors.html
_modules/textdescriptives/components/: coherence.html  dependency_distance.html  descriptive_stats.html  information_theory.html  pos_proportions.html  pos_stats.html  quality.html  quality_data_classes.html  readability.html
_sources/: coherence.rst.txt  dependencydistance.rst.txt  descriptivestats.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  posstats.rst.txt  quality.rst.txt  readability.rst.txt  tutorial.rst.txt  usingthepackage.rst.txt
_sources/tutorials/: filter_corpus_using_quality.ipynb.txt  introductory_tutorial.ipynb.txt  sklearn_integration.ipynb.txt
_static/: documentation_options.js  pygments.css
dev/pytest-coverage/: .coveragerc  run_coverage.py
docs/: coherence.rst  conf.py  dependencydistance.rst  descriptivestats.rst  extractors.rst  faq.rst  index.rst  information_theory.rst  installation.rst  news.rst  paper.rst  posstats.rst  quality.rst  readability.md  readability.rst  requirements.txt  robustness.rst  tutorial.rst  usingthepackage.rst
docs/tutorials/: filter_corpus_using_quality.ipynb  introductory_tutorial.ipynb  requirements.txt  sklearn_integration.ipynb
macroetym/: etym.py
paper/: paper.bib  paper.md  paper_quarto.html  paper_quarto.qmd  paper_quarto.tex  readme.md
spacy-textdescriptives/: __init__.py  about.py  dependency_distance.py  descriptive_stats.py  extractor.py  load_components.py  readability.py  subsetters.py  utils.py
spacy-textdescriptives/components/: descriptive_stats.py  utils.py
src/textdescriptives/: __init__.py  about.py  extract.py  extractors.py  load_components.py  sklearn_featurizer.py  utils.py
src/textdescriptives/components/: __init__.py  coherence.py  dependency_distance.py  descriptive_stats.py  fuzzer.py  information_theory.py  pos_proportions.py  quality.py  quality_data_classes.py  readability.py  utils.py
src/textdescriptives/integrations/: sklearn_featurizer.py
tests/: books.py  requirements.txt  test_coherence.py  test_dependency_distance.py  test_descriptive_stats.py  test_extract.py  test_extractors.py  test_information.py  test_load_components.py  test_pos_proportions.py  test_quality.py  test_readability.py  test_utils.py
textdescriptives/: __init__.py  about.py  calculator.py  calculators.py  call_by_language.py  dataframe_extract.py  dependency_distance.py  extract.py  extractor.py  load_components.py  readability.py  text.py  textdescriptives.py  utils.py
textdescriptives/architectures/: mlm_transformer.py
textdescriptives/components/: __init__.py  coherence.py  dependency_distance.py  descriptive_stats.py  mlm_component.py  pos_proportions.py  pos_stats.py  quality.py  readability.py  utils.py
textdescriptives/layers/: mlm_transformer.py
textdescriptives/macroetym/: default.nix  etym.py
textdescriptives/tests/: books.py  test_coherence.py  test_dataframe_extractor.py  test_dependency_distance.py  test_descriptive_stats.py  test_extract.py  test_extractor.py  test_load_components.py  test_pos_proportions.py  test_pos_stats.py  test_quality.py  test_readability.py  test_utils.py
tutorials/: filter_corpus_using_quality.html  introductory_tutorial.html  sklearn_integration.html
