[project]
name = "textdescriptives"
version = "2.4.0"
description = "A library for calculating a variety of features from text using spaCy"
authors = [{name = "Lasse Hansen", email = "lasseh0310@gmail.com"},
             {name = "Kenneth Enevoldsen"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

keywords = [
    "NLP",
    "spaCy",
    "text analysis",
    "natural language processing",
    "text features",
    "text statistics",
    "text descriptives",
    "text analytics",
    "text mining",
]

dependencies = [
    "spacy[lookups]>=3.1.0,<3.5.0",
    "numpy>=1.20.0,<1.25.0",
    "pandas>=1.0.0,<1.6.0",
    "pyphen>=0.11.0,<0.12.0",
    "ftfy>=6.0.3,<6.1.0",
]

requires-python = ">=3.7"

[project.urls]
homepage = "https://hlasse.github.io/TextDescriptives/"
repository = "https://github.com/HLasse/textdescriptives"
documentation = "https://hlasse.github.io/TextDescriptives/"

[project.optional-dependencies]
style = [
    "black==22.8.0",
    "pre-commit==2.20.0",
    "ruff==0.0.191",
    "mypy==0.991"
]
tests = [
    "pytest>=7.1.3,<7.3.0",
    "pytest-cov>=3.0.0,<3.0.1",
]
docs = [
    "sphinx>=5.3.0,<5.4.0",
    "furo==2022.12.7",
    "sphinx-copybutton>=0.5.1,<0.5.2",
    "sphinxext-opengraph>=0.7.3,<0.7.4",
    "myst-nb>=0.6.0,<1.17.0",
    "sphinx_design>=0.3.0,<0.3.1",
    "autodoc_pydantic>=1.1.0,<1.9.0",
]
tutorials = [
    "jupyter",
    "seaborn",
    "matplotlib",
    "datasets>=2.8.0,<2.9.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"
name = "Apache License 2.0"

[tool.setuptools.package-data]
"*" = ["*/spam.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/_vendorized/*",
    "**/about.py",
]


exclude_lines = [
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __unicode__",
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.semantic_release]
branch = "main"
version_variable = [
    "pyproject.toml:version"
]
build_command = "python -m pip install build; python -m build"

[tool.ruff]
exclude = [
    ".venv",
    ".env",
    ".git",
    "__pycache__",
]
