[metadata]
name = textdescriptives
version = 2.0.0
description = A library for calculating a variety of features from text using spaCy
author = Lasse Hansen
author_email = lasseh0310@gmail.com
url = https://github.com/HLasse/textdescriptives
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    NLP
[options]
packages = find:
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    spacy>=3.1.0<3.3.0
    numpy>=1.20.0,<1.24.0
    pandas>=1.0.0,<1.5.0
    pyphen>=0.11.0,<0.12.0
    ftfy>=6.0.3,<6.1.0
setup_requires =
    setuptools

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[semantic_release]
branch = "main"
version_variable = "setup.cfg:version"
upload_to_pypi = True
upload_to_release = True

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True

